  syntax = "proto3";

  package shared.user.v1;

  option go_package = "./user/v1;userv1";

  import "google/protobuf/timestamp.proto";
  import "validate/validate.proto";

  service UserService {
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc Logout(LogoutRequest) returns (LogoutResponse);
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  }

  message RegisterRequest {
    string email = 1 [(validate.rules).string = {
      email: true,
      max_len: 255
    }];
    string password = 2 [(validate.rules).string = {
      min_len: 8,
      max_len: 64
    }];
    string username = 3 [(validate.rules).string = {
      min_len: 3,
      max_len: 50
    }];
  }

  message RegisterResponse {
    string user_id = 1;
    string token = 2;
  }

  message LoginRequest {
    string email = 1 [(validate.rules).string.email = true];
    string password = 2;
  }

  message LoginResponse {
    string token = 1;
    User user = 2;
  }

  message LogoutRequest {
    string token = 1;
  }

  message LogoutResponse {}

  message GetUserRequest {
    string token = 1;
  }

  message GetUserResponse {
    User user = 1;
  }

  message UpdateUserRequest {
    string token = 1;
    optional string username = 2;
    optional string email = 3;
    optional string avatar = 4;
  }

  message UpdateUserResponse {
    User user = 1;
  }

  message User {
    string id = 1;
    string email = 2;
    string username = 3;
    optional string avatar = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
  }